// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider center should display orientation center divider 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
  testID="RNE__Divider__wrap"
>
  <View
    style={
      [
        {
          "backgroundColor": "rgb(229, 229, 229)",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 100,
        },
        {
          "marginHorizontal": 8,
        },
        {
          "height": 1,
          "minHeight": 1,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__start"
  />
  <Text
    style={
      [
        {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 14,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__label"
  >
     
    这是一条分割线
     
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "rgb(229, 229, 229)",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 100,
        },
        {
          "marginHorizontal": 8,
        },
        {
          "height": 1,
          "minHeight": 1,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__end"
  />
</View>
`;

exports[`Divider left should display orientation left divider 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
  testID="RNE__Divider__wrap"
>
  <View
    style={
      [
        {
          "backgroundColor": "rgb(229, 229, 229)",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 100,
        },
        {
          "marginHorizontal": 8,
        },
        {
          "height": 1,
          "minHeight": 1,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__start"
  />
  <Text
    style={
      [
        {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 14,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__label"
  >
     
    这是一条分割线
     
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "rgb(229, 229, 229)",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 100,
        },
        {
          "marginHorizontal": 8,
        },
        {
          "height": 1,
          "minHeight": 1,
          "minWidth": 16,
        },
        {
          "flexGrow": 100,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__end"
  />
</View>
`;

exports[`Divider right should display orientation right divider 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
  testID="RNE__Divider__wrap"
>
  <View
    style={
      [
        {
          "backgroundColor": "rgb(229, 229, 229)",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 100,
        },
        {
          "marginHorizontal": 8,
        },
        {
          "height": 1,
          "minHeight": 1,
          "minWidth": 16,
        },
        {
          "flexGrow": 100,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__start"
  />
  <Text
    style={
      [
        {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 14,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__label"
  >
     
    这是一条分割线
     
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "rgb(229, 229, 229)",
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 100,
        },
        {
          "marginHorizontal": 8,
        },
        {
          "height": 1,
          "minHeight": 1,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="RNE__Divider__end"
  />
</View>
`;
